--- a/README
+++ b/README
@@ -20,9 +20,11 @@ Donors Choose API
 
 import doco_api
 from doco_api import (Doco_API, Geo)
-doco_api.Geo().ProjectsNearLatLong(40.776104,-73.920822)
+testAPI = doco_api.Geo()
+testAPI.ProjectsNearLatLong(40.776104,-73.920822)
 
 =>Sample results (python dictionary of JSON results):
->>> doco_api.Geo().ProjectsNearLatLong(40.776104,-73.920822)
-{u'index': u'0', u'max': u'10', u'proposals': [{u'totalPrice': u'596.93', u'percentFunded': u'85', u'schoolName': u'Westside Elementary School', u'fundURL': u'https://secure.donorschoose.org/donors/givingCart.html?proposalid=768898&amp;donationAmount=&amp;utm_source=api&amp;utm_medium=feed&amp;utm_content=fundlink&amp;utm_campaign=DONORSCHOOSE', u'expirationDate': u'2012-05-02', u'proposalURL': u'http://www.donorschoose.org/donors/proposal.html?id=768898&amp;utm_source=api&amp;utm_medium=feed&amp;utm_content=bodylink&amp;utm_campaign=DONORSCHOOSE', u'teacherName': u'Mrs. Sellari', u'shortDescription': u'We are on a mission to terminate bullying in our classroom. I want students to learn to stand up for what is right by reporting acts of bullying and learning strategies for dealing with and...', u'id': u'768898', u'subject': {u'id': u'26', u'groupId': u'5', u'name': u'Character Education'}
+>>> testAPI.ProjectsNearLatLong(40.776104,-73.920822)
+http://api.donorschoose.org/common/json_feed.html?&APIKey=DONORSCHOOSE&centerLat=40.776104&centerLng=-73.920822
+{u'index': u'0', u'max': u'10', u'proposals': [{u'totalPrice': u'273.85', u'percentFunded': u'0', u'schoolName': u'Ps 122 Mamie Fay', u'fundURL': u'https://secure.donorschoose.org/donors/givingCart.html?proposalid=718970&amp;donationAmount=&amp;utm_source=api&amp;utm_medium=feed&amp;utm_content=fundlink&amp;utm_campaign=DONORSCHOOSE', u'expirationDate': u'2012-06-13', u'proposalURL': u'http://www.donorschoose.org/donors/proposal.html?id=718970&amp;utm_source=api&amp;utm_medium=
 
