--- a/README
+++ b/README
@@ -22,9 +22,11 @@ import doco_api
 from doco_api import (Doco_API, Geo)
 testAPI = doco_api.Geo()
 testAPI.ProjectsNearLatLong(40.776104,-73.920822)
-
+=> results in format:
+return (titles, proposalURLs)
 =>Sample results (python dictionary of JSON results):
 >>> testAPI.ProjectsNearLatLong(40.776104,-73.920822)
+OUTDATED this is example output for (titles) only
 http://api.donorschoose.org/common/json_feed.html?&APIKey=DONORSCHOOSE&centerLat=40.776104&centerLng=-73.920822
 {u'index': u'0', u'max': u'10', u'proposals': [{u'totalPrice': u'273.85', u'percentFunded': u'0', u'schoolName': u'Ps 122 Mamie Fay', u'fundURL': u'https://secure.donorschoose.org/donors/givingCart.html?proposalid=718970&amp;donationAmount=&amp;utm_source=api&amp;utm_medium=feed&amp;utm_content=fundlink&amp;utm_campaign=DONORSCHOOSE', u'expirationDate': u'2012-06-13', u'proposalURL': u'http://www.donorschoose.org/donors/proposal.html?id=718970&amp;utm_source=api&amp;utm_medium=
 
